src/test/ui/existential_types/generic_nondefining_use.stderr
error: defining existential type use does not fully define existential type
  --> $DIR/generic_nondefining_use.rs:9:1
   |
LL | / fn cmp() -> Cmp<u32> {
LL | |     5u32
LL | | }
   | |_^

error: could not find defining uses
  --> $DIR/generic_nondefining_use.rs:5:1
   |
LL | existential type Cmp<T>: 'static;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

